; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_network-injection-lua.c_proxy_resultset_fields_lua_push_ref.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_network-injection-lua.c_proxy_resultset_fields_lua_push_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@methods_proxy_resultset_fields = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @proxy_resultset_fields_lua_push_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proxy_resultset_fields_lua_push_ref(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @g_ref_ref(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32** @lua_newuserdata(i32* %8, i32 8)
  store i32** %9, i32*** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32**, i32*** %5, align 8
  store i32* %10, i32** %11, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @methods_proxy_resultset_fields, align 4
  %14 = call i32 @proxy_getmetatable(i32* %12, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @lua_setmetatable(i32* %15, i32 -2)
  ret i32 1
}

declare dso_local i32 @g_ref_ref(i32*) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @proxy_getmetatable(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
